@@ -5,6 +5,7 @@ import cz.wildwest.zaurex.data.Role;
 import cz.wildwest.zaurex.data.entity.User;
 import cz.wildwest.zaurex.data.service.UserRepository;
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -23,28 +24,42 @@ public class DataGenerator {
                 logger.info("Using existing database");
                 return;
             }
-            int seed = 123;
-
+            //
             logger.info("Generating demo data");
-
-            logger.info("... generating 2 User entities...");
-            User user = new User();
-            user.setName("John Normal");
-            user.setUsername("user");
-            user.setHashedPassword(passwordEncoder.encode("user"));
-            user.setProfilePictureUrl(
-                    "https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=128&h=128&q=80");
-            user.setRoles(Collections.singleton(Role.USER));
-            userRepository.save(user);
-            User admin = new User();
-            admin.setName("Emma Powerful");
-            admin.setUsername("admin");
-            admin.setHashedPassword(passwordEncoder.encode("admin"));
-            admin.setProfilePictureUrl(
-                    "https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=128&h=128&q=80");
-            admin.setRoles(Set.of(Role.USER, Role.ADMIN));
-            userRepository.save(admin);
-
+            //
+            logger.info("... generating 5 User entities...");
+            User salesman = new User();
+            salesman.setName("Prodavač");
+            salesman.setUsername("prodavac");
+            salesman.setHashedPassword(passwordEncoder.encode("prodavac"));
+            salesman.setRoles(Collections.singleton(Role.SALESMAN));
+            //
+            User warehouseman = new User();
+            warehouseman.setName("Skladník");
+            warehouseman.setUsername("skladnik");
+            warehouseman.setHashedPassword(passwordEncoder.encode("skladnik"));
+            warehouseman.setRoles(Collections.singleton(Role.WAREHOUSEMAN));
+            //
+            User shiftLeader = new User();
+            shiftLeader.setName("Vedoucí směny");
+            shiftLeader.setUsername("vedoucismeny");
+            shiftLeader.setHashedPassword(passwordEncoder.encode("vedoucismeny"));
+            shiftLeader.setRoles(Collections.singleton(Role.SHIFT_LEADER));
+            //
+            User manager = new User();
+            manager.setName("Manažer");
+            manager.setUsername("manazer");
+            manager.setHashedPassword(passwordEncoder.encode("manazer"));
+            manager.setRoles(Set.of(Role.values()));
+            //
+            User shiftLeader2 = new User();
+            shiftLeader2.setName("Vedocí směny prodavač");
+            shiftLeader2.setUsername("vedoucismeny2");
+            shiftLeader2.setHashedPassword(passwordEncoder.encode("vedoucismeny2"));
+            shiftLeader2.setRoles(Set.of(Role.SHIFT_LEADER, Role.SALESMAN));
+            //
+            userRepository.saveAll(List.of(salesman, warehouseman, shiftLeader, manager, shiftLeader2));
+            //
             logger.info("Generated demo data");
         };
     }
